<resources>
    <string name="app_name">INSOPTAndroidPractice</string>
    <string name="sign_in_title">Welcome to SOPT</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="sign_in">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="sign_in_description">솝트의 회원이 되어보세요!</string>
    <string name="sign_up_check">가입하기</string>
    <string name="mbti">mbti</string>
    <string name="part">파트</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_input">nickname</string>
    <string name="part_input">part</string>
    <string name="profile">프로필 사진</string>
    <string name="success_sign_in">로그인에 성공했습니다.</string>
    <string name="failure_sign_in">로그인에 실패했습니다.</string>
    <string name="success_sign_up">SOPT에 오신걸 환영합니다!</string>
    <string name="failure_sign_up">회원가입에 실패했습니다.</string>
    <string name="home">홈</string>
    <string name="gallery">갤러리</string>
    <string name="search">검색</string>
    <string name="github_star">깃허브 즐겨찾기</string>
    <string name="home_title">Profile</string>
    <string name="invalid_email">영문자, 숫자를 포함한 6 ~ 10자 및 이메일 양식을 준수해 주세요.</string>
    <string name="invalid_password">영문자, 숫자, 특수문자를 포함한 6 ~ 12자 입니다.</string>
    <string name="music_title">Music</string>
    <string name="register_music_title">Register Music</string>
    <string name="title">title:</string>
    <string name="singer">singer:</string>
</resources>