<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/sign_in_tb"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/Text24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in_title" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/sign_in_start_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/sign_in_end_gl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_id_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/id"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/sign_in_end_gl"
            app:layout_constraintStart_toStartOf="@id/sign_in_start_gl"
            app:layout_constraintTop_toBottomOf="@id/sign_in_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_password_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/sign_in_end_gl"
            app:layout_constraintStart_toStartOf="@id/sign_in_start_gl"
            app:layout_constraintTop_toBottomOf="@id/sign_in_id_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_sign_in_btn"
            style="@style/Text16.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/selector_button_text_color"
            android:enabled="false"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@id/sign_in_sign_up_btn"
            app:layout_constraintEnd_toEndOf="@id/sign_in_end_gl"
            app:layout_constraintStart_toStartOf="@id/sign_in_start_gl" />

        <TextView
            android:id="@+id/sign_in_description_tv"
            style="@style/Text14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_description"
            app:layout_constraintBottom_toBottomOf="@id/sign_in_sign_up_btn"
            app:layout_constraintEnd_toStartOf="@id/sign_in_sign_up_btn"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/sign_in_start_gl"
            app:layout_constraintTop_toTopOf="@id/sign_in_sign_up_btn" />

        <TextView
            android:id="@+id/sign_in_sign_up_btn"
            style="@style/Text14.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/sign_in_end_gl"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/sign_in_description_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>