<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.sample.presentation.signup.viewmodel.SignUpViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/sign_up_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:navigationIcon="@drawable/ic_back">

                <TextView
                    style="@style/Text20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/sign_up" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sign_up_start_gl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="30dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/sign_up_end_gl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="30dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_id_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:hint="@string/email"
                    app:boxStrokeColor="@color/black"
                    app:errorTextColor="@color/red"
                    app:helperText="이메일을 입력해 주세요."
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/sign_up_end_gl"
                    app:layout_constraintStart_toStartOf="@id/sign_up_start_gl"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_id_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@={viewModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_password_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/black"
                    app:errorTextColor="@color/red"
                    app:helperText="비밀번호를 입력해 주세요."
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/sign_up_end_gl"
                    app:layout_constraintStart_toStartOf="@id/sign_up_start_gl"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_id_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="@={viewModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_name_til"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/nickname"
                    app:boxStrokeColor="@color/black"
                    app:errorTextColor="@color/red"
                    app:helperText="닉네임을 입력해 주세요."
                    app:helperTextEnabled="true"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@id/sign_up_end_gl"
                    app:layout_constraintStart_toStartOf="@id/sign_up_start_gl"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_password_til">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_name_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@={viewModel.name}" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_sign_up_btn"
            style="@style/Text16.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_button"
            android:backgroundTint="@color/selector_button_text_color"
            android:enabled="@{viewModel.isValid()}"
            android:text="@string/sign_up_check"
            app:layout_constraintEnd_toEndOf="@id/sign_up_end_gl"
            app:layout_constraintStart_toStartOf="@id/sign_up_start_gl" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>