<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.sample.presentation.music.viewmodel.MusicViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/sign_up_tb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:navigationIcon="@drawable/ic_back">

                <TextView
                    style="@style/Text20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_music_title" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/register_music_cv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="130dp"
                app:cardCornerRadius="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/register_music_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/ic_add_music" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/register_music_title_tv"
                style="@style/Text20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                android:text="@string/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_music_cv" />

            <EditText
                android:id="@+id/register_music_title_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="60dp"
                android:maxLines="1"
                android:text="@={viewModel.title}"
                app:layout_constraintBottom_toBottomOf="@id/register_music_title_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/register_music_title_tv"
                app:layout_constraintTop_toTopOf="@id/register_music_title_tv" />

            <TextView
                android:id="@+id/register_music_singer_tv"
                style="@style/Text20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                android:text="@string/singer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_music_title_tv" />

            <EditText
                android:id="@+id/register_music_singer_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="60dp"
                android:maxLines="1"
                android:text="@={viewModel.singer}"
                app:layout_constraintBottom_toBottomOf="@id/register_music_singer_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/register_music_singer_tv"
                app:layout_constraintTop_toTopOf="@id/register_music_singer_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/register_music_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:enabled="@{viewModel.isValid()}"
            app:borderWidth="0dp"
            app:srcCompat="@drawable/ic_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>